--- a/Templates/upload_form.html
+++ b/Templates/upload_form.html
@@ -43,6 +43,7 @@
     </style>
 </head>
 <body>
+    {% if form_type == "a" %}
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="form-group">
@@ -63,5 +64,27 @@
         </div>
         <button type="submit">Upload</button>
     </form>
+    {% if data %}
+    <p>Author: {{ data.author }}</p>
+    <p>Title: {{ data.title }}</p>
+    <p>URL: {{ data.src }}</p>
+    {% endif %}
+    {% endif %}
+
+    {% if form_type == "b" %}
+    <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="form-group">
+            {{ form.videoBrandType.label_tag }}
+            {{ form.videoBrandType }}
+        </div>
+        <div class="form-group">
+            {{ form.URL.label_tag }}
+            {{ form.URL }}
+        </div>
+        <button type="submit" name="action" type="get_data">Get Data</button>
+        <button type="submit" name="action" type="upload">Upload</button>
+    </form>
+    {% endif %}
 </body>
 </html>
