Add Video's Thumbnail Functionalities

--- a/Templates/upload_form.html
+++ b/Templates/upload_form.html
@@ -98,6 +98,9 @@
         <div class="paragraph">
             <p style="max-width: 400px; word-break: break-all;">URL: {{ data.src }}</p>
         </div>
+        <div class="paragraph">
+            <p style="max-width: 400px; word-break: break-all;">URL: {{ data.thumbnail_url }}</p>
+        </div>
     </div>
     {% endif %}
     {% endif %}
