--- a/Templates/upload_form.html
+++ b/Templates/upload_form.html
@@ -130,6 +130,13 @@
         <input type="submit" name="reset" value="Reset">
         <input type="submit" name="upload" value="Upload">
     </form>
+    {% if data %}
+    <div>
+        <div class="component">
+            <p>Author: {{ data.author }} </p>
+        </div>
+    </div>
+    {% endif %}
     {% endif %}
 </body>
 </html>
